# pdf.zig

./: .gitignore  AGENTS.md  README.md  UPSTREAM-README.md  build.zig
.github/: CODEOWNERS  pull_request_template.md
audit/: bench_baseline.md  cjk_subset.py  classify_empties.py  empties_classified.tsv  fetch_real_corpus.py  fuzz_findings.md  fuzz_loop_state.md  fuzz_loop_summary.md  qpdf_check.py  qpdf_emit_fixtures.zig  v1.2-codex-research.md  v1_2_alfred_sample.py  v1_2_annotate.py  v1_2_eval.py  v1_2_fintabnet_subset.py  v1_2_pubtables_subset.py  v1_2_teds.py  v1_4_cjk_run.py  week0_run.py  week4_corpus_run.py  week5_bakeoff.py  week6_5_bakeoff.py  xref_fixtures.md  xref_repair_test.py
docs/: PROJECT-LOG.md  ROADMAP.md  alfred-bakeoff-report.md  architecture.md  decisions.md  enforcement-plan.md  streaming-layer-design.md  v1.2-dataset-status.md  v1.2-table-detection-design.md  v1.6-tier2-design.md  v1.6-wave3-and-v2.0-design.md  week0-audit.md  week1-status.md  week2-status.md  week5-bakeoff-report.md  week6_5-bakeoff-cycle10.md  week7-ga-audit.md
python/: pyproject.toml
scripts/: gen_srgb_icc.py  update-formula.sh
src/: a11y_emitter.zig  alloc_failure_test.zig  attr_flattener.zig  bench.zig  bidi.zig  capi.zig  chunk.zig  cli_pdfzig.zig  cmap_writer.zig  crypto.zig  encoding.zig  encrypt_writer.zig  font_embedder.zig  fuzz_cov.zig  fuzz_runner.zig  gen_cjk_corpus.zig  image_writer.zig  integration_test.zig  interpreter.zig  jpeg_meta.zig  lattice.zig  layout.zig  main.zig  main_pdfzig.zig  markdown.zig  markdown_to_pdf.zig  mcid_resolver.zig  pagetree.zig  (+16 more)
(+47 files in other folders)
