[build-system]
requires = ["setuptools>=61.0", "cffi>=1.15", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-pdf-zig"
version = "1.0.0rc2"
description = "PDF -> Markdown extraction CLI + library, NDJSON-streaming, optimized for LLM consumers (Zig)"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.8"
dependencies = ["cffi>=1.15"]
authors = [
    {name = "Laurent Fabre"},
    {name = "Lulzx (upstream zpdf author)"},
]
keywords = ["pdf", "text-extraction", "parser", "zig", "llm", "ndjson", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/laurentfabre/pdf.zig"
Repository = "https://github.com/laurentfabre/pdf.zig"
Issues = "https://github.com/laurentfabre/pdf.zig/issues"
Upstream = "https://github.com/Lulzx/zpdf"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zpdf*"]

[tool.setuptools.package-data]
zpdf = ["*.h", "*.so", "*.dylib", "*.dll"]
